Fix: New Group DM opening in wrong position

--- a/src/components/popout/_group_dm.scss
+++ b/src/components/popout/_group_dm.scss
@@ -9,6 +9,7 @@
     min-height: calc(100vh - 80px);
     max-height: unset;
     background-color: $b1;
+    right: -68px;
     &.modal-3HD5ck{
         box-shadow: none;
     }
